* https://github.com/docToolchain/docToolchain/issues/1031[#1031: dtcw ignores installed Java RE when docker is installed - your java version 17 is too new]
* various fixes in `dtcw`, `dtcw.ps1`:
** pick the right environment if none provided by the user
** support of JAVA_HOME which was silently ignored.

=== added

=== changed

* Add support for Java 17
* Drop support for Java 8
* Upgrade Gradle to 7.5.1
* Upgrade dependencies
** 'org.asciidoctor:asciidoctor-gradle-jvm:4.0.0-alpha.1' (remove obsolete cloning of `reveal.js`)
** 'org.apache.httpcomponents:httpmime:4.5.14'
** 'org.codehaus.groovy:groovy-xml:3.0.13'
** 'org.apache.poi:poi-ooxml:5.2.3'
** 'org.openapitools:openapi-generator-gradle-plugin:6.5.0'
** 'com.structurizr:structurizr-dsl:1.30.1'
** 'com.structurizr:structurizr-export:1.14.0'
** 'com.structurizr:structurizr-graphviz:2.0.0'
** 'org.jsoup:jsoup:1.15.4'
** 'org.asciidoctor:asciidoctorj-diagram:2.2.7'
** 'io.pebbletemplates:pebble:3.2.0'
** 'org.junit.jupiter:junit-jupiter-api:5.9.3'
** 'net.bytebuddy:byte-buddy:1.14.4'
** 'de.undercouch.download:5.4.0'
** 'org.openapi.generator:6.5.0'
** 'com.github.ben-manes.versions:0.46.0'
** 'com.athaydes:spock-reports:2.3.2-groovy-3.0'
** 'org.spockframework:spock-core:2.3-groovy-3.0'
** 'org.asciidoctor.asciidoctorj-diagram:2.2.7'
* `dtcw` and `dtcw.ps1`:
** improve output with hints to guide the user
** add `--version` option
** deprecate `getJava` with `install java`
** add environment variable `DTC_CONFIG_FILE` to specify a configuration file other than than `docToolchainConfig.groovy` in the project root folder
* `collectIncludes`
** changed regexp to start with `^[A-Za-z]` as file name to allow lowercase filenames as well.
** certain directories are excluded from traversal. Define `excludeDirectories` in order to skip additional directories.
* doc: replace old URL `doctoolchain.github.io` occurrences with the new `doctoolchain.org`

== 2.2.1 - 2023-03-05

=== fixes
